add RegisterFrame for registration of a new employee

--- a/src/main/java/com/cimpapps/construction/pm/client/gui/LogInFrame.form
+++ b/src/main/java/com/cimpapps/construction/pm/client/gui/LogInFrame.form
@@ -23,21 +23,13 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" attributes="0">
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabel1" min="-2" pref="81" max="-2" attributes="0"/>
-                          <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="checkAdmin" min="-2" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="jLabel1" min="-2" pref="81" max="-2" attributes="0"/>
+                  <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="40" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <Component id="buttonRegister" min="-2" max="-2" attributes="0"/>
@@ -69,7 +61,6 @@
               <EmptySpace pref="24" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="buttonLogIn" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="checkAdmin" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="buttonRegister" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -94,12 +85,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="buttonLogIn">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Log in"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JCheckBox" name="checkAdmin">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Administrator"/>
+        <Property name="text" type="java.lang.String" value="Log In"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="buttonRegister">
